Added NavX support and reworked for build